Add Docker CLI support (#24)
* add Dockerfile and maven configuration for docker build

* add docker build and push support to buildspec

* fix dockerfile working directory issue, including switch to jre 8

* update docker docs with proper image tag

* add proper volume use and a warning about limitations